Data Confidence and Hypothesis Test Complete

--- a/FINAL_PROJECT_CODE.ipynb
+++ b/FINAL_PROJECT_CODE.ipynb
@@ -6,10 +6,31 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'TeachingDemos' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\12482\\AppData\\Local\\Temp\\RtmpKMrcnc\\downloaded_packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"TeachingDemos\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Warning message:\n",
+      "\"package 'TeachingDemos' was built under R version 3.6.3\"Warning message:\n",
       "\"package 'dplyr' was built under R version 3.6.3\"\n",
       "Attaching package: 'dplyr'\n",
       "\n",
@@ -25,13 +46,14 @@
     }
    ],
    "source": [
+    "library(TeachingDemos) \n",
     "library(dplyr)\n",
     "df <- read.csv(\"data.csv\", header=TRUE, stringsAsFactors=FALSE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,6 +155,108 @@
    ],
    "source": [
     "hist(df$BattingAvg,xlab = \"Batting Average\",ylab = \"Frequency\", main = \"Histogram of Batting Averages\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_NL = df[which(df$lgID == \"NL\"), ]   \n",
+    "df_AL = df[which(df$lgID == \"AL\"), ]   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu_o = mean(df_AL$BattingAvg)\n",
+    "standard_dev=sd(df_AL$BattingAvg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 3736\n",
+      "[1] 3470\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(count(df_NL)$n))\n",
+    "print(sum(count(df_AL)$n))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tOne Sample z-test\n",
+       "\n",
+       "data:  df_NL$BattingAvg\n",
+       "z = 1.0428, n = 3.7360e+03, Std. Dev. = 3.0067e-02, Std. Dev. of the\n",
+       "sample mean = 4.9192e-04, p-value = 0.1485\n",
+       "alternative hypothesis: true mean is greater than 0.2697366\n",
+       "95 percent confidence interval:\n",
+       " 0.2694404       Inf\n",
+       "sample estimates:\n",
+       "mean of df_NL$BattingAvg \n",
+       "               0.2702496 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "z.test(df_NL$BattingAvg, y = NULL, alternative = \"greater\", mu = mu_o, stdev=standard_dev) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n <- sum(count(df)$n) \n",
+    "xbar <- mean(df$BattingAvg) \n",
+    "s <- sd(df$BattingAvg)\n",
+    "margin <- qt(0.975,df=n-1)*s/sqrt(n)\n",
+    "lowerinterval <- xbar - margin\n",
+    "upperinterval <- xbar + margin\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 0.2693089\n",
+      "[1] 0.2706962\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lowerinterval)\n",
+    "print(upperinterval)"
    ]
   },
   {
