--- a/FINAL_PROJECT_CODE.ipynb
+++ b/FINAL_PROJECT_CODE.ipynb
@@ -2,27 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'TeachingDemos' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\12482\\AppData\\Local\\Temp\\RtmpKMrcnc\\downloaded_packages\n"
-     ]
-    }
-   ],
-   "source": [
-    "install.packages(\"TeachingDemos\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,19 +28,22 @@
       "The following objects are masked from 'package:base':\n",
       "\n",
       "    intersect, setdiff, setequal, union\n",
-      "\n"
+      "\n",
+      "Warning message:\n",
+      "\"package 'boot' was built under R version 3.6.3\""
      ]
     }
    ],
    "source": [
     "library(TeachingDemos) \n",
     "library(dplyr)\n",
+    "library(boot)\n",
     "df <- read.csv(\"data.csv\", header=TRUE, stringsAsFactors=FALSE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +247,161 @@
    "source": [
     "print(lowerinterval)\n",
     "print(upperinterval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_function <- function(x,mle)\n",
+    "{ \n",
+    "    data <- rnorm(length(x),mle[1],mle[2]) \n",
+    "    return(data)\n",
+    "}\n",
+    "theta_star_function <- function(x,i) mean(x[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of 10\n",
+      " $ t0       : num 0.27\n",
+      " $ t        : num [1:1000, 1] 0.27 0.27 0.271 0.27 0.269 ...\n",
+      " $ R        : num 1000\n",
+      " $ data     : num [1:3470] 0.242 0.283 0.296 0.293 0.255 ...\n",
+      " $ seed     : int [1:626] 10403 545 -1988101952 1011019939 497386195 -1704713621 -1636149491 -119380885 -595696319 1145379880 ...\n",
+      " $ statistic:function (x, i)  \n",
+      "  ..- attr(*, \"srcref\")= 'srcref' int [1:8] 6 24 6 47 24 47 6 6\n",
+      "  .. ..- attr(*, \"srcfile\")=Classes 'srcfilecopy', 'srcfile' <environment: 0x000000004c4faf18> \n",
+      " $ sim      : chr \"parametric\"\n",
+      " $ call     : language boot(data = df_AL$BattingAvg, statistic = theta_star_function, R = 1000,      sim = \"parametric\", ran.gen = gen_f| __truncated__ ...\n",
+      " $ ran.gen  :function (x, mle)  \n",
+      "  ..- attr(*, \"srcref\")= 'srcref' int [1:8] 1 17 5 1 17 1 1 5\n",
+      "  .. ..- attr(*, \"srcfile\")=Classes 'srcfilecopy', 'srcfile' <environment: 0x000000004c4faf18> \n",
+      " $ mle      : num [1:2] 0.2697 0.0301\n",
+      " - attr(*, \"class\")= chr \"boot\"\n",
+      " - attr(*, \"boot_type\")= chr \"boot\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "NL <- boot(data = df_NL$BattingAvg, \n",
+    "     statistic = theta_star_function, \n",
+    "     R = 1000, sim = \"parametric\", \n",
+    "     ran.gen = gen_function, mle = c(mean(df_NL$BattingAvg), sd(df_NL$BattingAvg)))\n",
+    "AL <- boot(data = df_AL$BattingAvg, \n",
+    "     statistic = theta_star_function, \n",
+    "     R = 1000, sim = \"parametric\", \n",
+    "     ran.gen = gen_function, mle = c(mean(df_AL$BattingAvg),sd(df_AL$BattingAvg)))\n",
+    "str(AL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.269735553551056"
+      ],
+      "text/latex": [
+       "0.269735553551056"
+      ],
+      "text/markdown": [
+       "0.269735553551056"
+      ],
+      "text/plain": [
+       "[1] 0.2697356"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.270257253076232"
+      ],
+      "text/latex": [
+       "0.270257253076232"
+      ],
+      "text/markdown": [
+       "0.270257253076232"
+      ],
+      "text/plain": [
+       "[1] 0.2702573"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mean(AL$t)\n",
+    "mean(NL$t)\n",
+    "n1 <- sum(count(df_NL)$n)\n",
+    "n2 <- sum(count(df_AL)$n)\n",
+    "Sp <- sqrt(((n1-1)*sd(NL$t)+(n2-1)*sd(AL$t)/(n1+n2-2)))\n",
+    "           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "-0.062761947291806"
+      ],
+      "text/latex": [
+       "-0.062761947291806"
+      ],
+      "text/markdown": [
+       "-0.062761947291806"
+      ],
+      "text/plain": [
+       "[1] -0.06276195"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.0638053463421573"
+      ],
+      "text/latex": [
+       "0.0638053463421573"
+      ],
+      "text/markdown": [
+       "0.0638053463421573"
+      ],
+      "text/plain": [
+       "[1] 0.06380535"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Upper95 <- mean(NL$t)-mean(AL$t)+(1.96*Sp*sqrt(1/n1+1/n2))\n",
+    "Lower95 <- mean(NL$t)-mean(AL$t)-(1.96*Sp*sqrt(1/n1+1/n2))\n",
+    "Lower95\n",
+    "Upper95"
    ]
   },
   {
