--- a/FINAL_PROJECT_CODE.ipynb
+++ b/FINAL_PROJECT_CODE.ipynb
@@ -38,7 +38,8 @@
     "library(TeachingDemos) \n",
     "library(dplyr)\n",
     "library(boot)\n",
-    "df <- read.csv(\"data.csv\", header=TRUE, stringsAsFactors=FALSE)"
+    "df <- read.csv(\"data.csv\", header=TRUE, stringsAsFactors=FALSE)\n",
+    "#Loading in data set and libraries used"
    ]
   },
   {
@@ -79,7 +80,8 @@
     }
    ],
    "source": [
-    "str(df)"
+    "str(df)\n",
+    "#Checking out what features data set has"
    ]
   },
   {
@@ -88,7 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[which(df$stint ==1), ]   "
+    "df = df[which(df$stint ==1), ]   \n",
+    "#Removing all duplicate players that switched teams"
    ]
   },
   {
@@ -97,7 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df %>% group_by(ï..playerID)"
+    "df = df %>% group_by(ï..playerID)\n",
+    "#Aggregating players year by year performace to get career summary"
    ]
   },
   {
@@ -106,7 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df$BattingAvg = df$H/df$AB"
+    "df$BattingAvg = df$H/df$AB \n",
+    "#Creating column computing batting average"
    ]
   },
   {
@@ -115,7 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[which(df$BattingAvg >=.001), ]   "
+    "df = df[which(df$BattingAvg >=.001), ]   \n",
+    "#Removing Batting averages of 0"
    ]
   },
   {
@@ -124,7 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[which(df$G >=100), ]   "
+    "df = df[which(df$G >=100), ]   \n",
+    "#Removing Players that had played less than 100 games"
    ]
   },
   {
@@ -144,7 +151,8 @@
     }
    ],
    "source": [
-    "hist(df$BattingAvg,xlab = \"Batting Average\",ylab = \"Frequency\", main = \"Histogram of Batting Averages\")"
+    "hist(df$BattingAvg,xlab = \"Batting Average\",ylab = \"Frequency\", main = \"Histogram of Batting Averages\")\n",
+    "#Histogram of batting averages, resembles normal distribution"
    ]
   },
   {
@@ -154,7 +162,8 @@
    "outputs": [],
    "source": [
     "df_NL = df[which(df$lgID == \"NL\"), ]   \n",
-    "df_AL = df[which(df$lgID == \"AL\"), ]   "
+    "df_AL = df[which(df$lgID == \"AL\"), ]   \n",
+    "#Splitting players by league"
    ]
   },
   {
@@ -164,7 +173,8 @@
    "outputs": [],
    "source": [
     "mu_o = mean(df_AL$BattingAvg)\n",
-    "standard_dev=sd(df_AL$BattingAvg)"
+    "standard_dev=sd(df_AL$BattingAvg)\n",
+    "#Computing mean and standard deviation for American League"
    ]
   },
   {
@@ -213,7 +223,8 @@
     }
    ],
    "source": [
-    "z.test(df_NL$BattingAvg, y = NULL, alternative = \"greater\", mu = mu_o, stdev=standard_dev) "
+    "z.test(df_NL$BattingAvg, y = NULL, alternative = \"greater\", mu = mu_o, stdev=standard_dev) \n",
+    "#Computing Z test"
    ]
   },
   {
@@ -246,7 +257,8 @@
    ],
    "source": [
     "print(lowerinterval)\n",
-    "print(upperinterval)"
+    "print(upperinterval)\n",
+    "#95% Confident that the true batting average mean is between .269 and .270"
    ]
   },
   {
@@ -260,7 +272,9 @@
     "    data <- rnorm(length(x),mle[1],mle[2]) \n",
     "    return(data)\n",
     "}\n",
-    "theta_star_function <- function(x,i) mean(x[i])"
+    "theta_star_function <- function(x,i) mean(x[i])\n",
+    "#https://medium.com/@statisticianonline/bootstrap-r-tutorial-learn-about-parametric-and-nonparametric-bootstrap-through-simulation-f6be4d4fc532\n",
+    "#Source for Parametric Bootstrapping for Normal Distribution"
    ]
   },
   {
@@ -301,7 +315,8 @@
     "     statistic = theta_star_function, \n",
     "     R = 1000, sim = \"parametric\", \n",
     "     ran.gen = gen_function, mle = c(mean(df_AL$BattingAvg),sd(df_AL$BattingAvg)))\n",
-    "str(AL)"
+    "str(AL)\n",
+    "#Bootstrapped Statistics for two leagues"
    ]
   },
   {
@@ -347,8 +362,7 @@
     }
    ],
    "source": [
-    "mean(AL$t)\n",
-    "mean(NL$t)\n",
+    "\n",
     "n1 <- sum(count(df_NL)$n)\n",
     "n2 <- sum(count(df_AL)$n)\n",
     "Sp <- sqrt(((n1-1)*sd(NL$t)+(n2-1)*sd(AL$t)/(n1+n2-2)))\n",
@@ -401,7 +415,8 @@
     "Upper95 <- mean(NL$t)-mean(AL$t)+(1.96*Sp*sqrt(1/n1+1/n2))\n",
     "Lower95 <- mean(NL$t)-mean(AL$t)-(1.96*Sp*sqrt(1/n1+1/n2))\n",
     "Lower95\n",
-    "Upper95"
+    "Upper95\n",
+    "#95% conThe true difference "
    ]
   },
   {
